# fjidro

./: README.md  main.py  pyproject.toml
templates/: add_club.html  add_club_wtf.html
