[tool.poetry]
name = "нова папка (8)"
version = "0.1.0"
description = ""
authors = ["Andry2127 <andrybudnak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
